--- a/Makefile.linux
+++ b/Makefile.linux
@@ -15,9 +15,9 @@ LDFLAGS = -lopencv_calib3d -lopencv_contrib -lopencv_core -lopencv_features2d -l
 
 SW_LDFLAGS = -shared 
 
-INCLUDES = -I'/usr/include/opencv' -I'/usr/include/python2.7'
+INCLUDES = -I'/usr/include/opencv' -I'/usr/include/python2.7' -I'/usr/include'
 
-LIB_INCLUDES = -L'/usr/lib/python2.7/config'
+LIB_INCLUDES = -L'/usr/lib/python2.7/config' -L'/usr/lib'
 
 all: _imgcv.so
 
